# Kivy-Python

./: .gitignore  README.md  dispatcher.py  events.py  main.py  pyproject.toml
.github/workflows/: buildozer.yml
collaborative_app/: buildozer.spec  main.py  server.py
collaborative_app/kivy_dnd/: drop_zone.py
collaborative_app/kivy_network/: events.py
kivy-dragdrop/: README.md
kivy-dragdrop/demo/: main.py
kivy-dragdrop/kivy_dnd/: draggable.py  manager.py
kivy-network-project/: README.md  kivy_bridge.py  requirements.txt
kivy_network/: kivy_bridge.py  network_client.py
tests/: dummy_server.py  test_client.py
